[package]
name = "block-in-future"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
ethers = { version = "2.0", features = ["rustls"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
eyre = "0.6"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.2"
